survey creation added

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -83,6 +83,10 @@ li a:hover {
 				<a th:href="@{/admin/announcement}">
 				Announcement</a>
 			</div>
+			<div class="link">
+				<a th:href="@{/admin/surveys}">
+				Surveys</a>
+			</div>
 		</div>
 		<div class="col-md-9" style="padding-top:20px;">
 			
