--- a/src/main/resources/templates/mission.html
+++ b/src/main/resources/templates/mission.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-	<div style="margin-top:25px;border:1px solid #e0ffff; background-color:#e0ffff;padding:10px 0px" class="nav-container">
+	<div style="margin-top:25px;border:1px solid #e0ffff; background-color:#e0ffff;padding:10px 0px" class="container">
 		<div lang="en" th:replace="header :: header"> </div>
 		<div lang="en" th:replace="header :: button-div"> </div>
 		<div class="col-md-12" style="margin-top:10px;">
