--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -113,6 +113,10 @@
 				<div class="link">
 					<a th:href="@{/user/profile}"> Update Profile</a>
 				</div>
+				<div class="link">
+				<a th:href="@{/user/surveys}">
+					Surveys</a>
+				</div>
 				<div>
 					
 					<div> 
