--- a/src/main/resources/templates/user/surveys.html
+++ b/src/main/resources/templates/user/surveys.html
@@ -5,9 +5,10 @@
 <head>
 <title>Survey Page</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
 
 <style>
 
@@ -27,6 +28,7 @@
 	$(document).ready(function(){
 	/*<![CDATA[*/
 	
+		   
 		    var survey = [[${survey}]];
 		    var surveyObj = JSON.parse(survey);	    
 	/*]]>*/    
@@ -48,27 +50,32 @@
 		   				var optn ='<div class="col-sm-12" style="padding-left:30px;">';
 		   				if(type==1)
 		   				{
+		   					optn+='<div id="qst'+questions[i].questionId+'">';
 		   					for(var j =0; j<questions[i].options.length;j++)
 		   					{
-		   						optn+='<div><input class="qst'+questions[i].questionId+'" type="radio" value="'+questions[i].options[j].id+'" />'+questions[i].options[j].content+'</div>';
+		   						optn+='<div><input  type="radio" name="'+questions[i].questionId+'" value="'+questions[i].options[j].id+'" />'+questions[i].options[j].content+'</div>';
 		   					}
+		   					optn+='</div>';
 		   				}
 		   				if(type==2)
 		   				{
+		   					optn+='<div id="qst'+questions[i].questionId+'">';
 		   					for(var j =0; j<questions[i].options.length;j++)
 		   					{
-		   						optn+='<div><input class="qst'+questions[i].questionId+'" type="checkbox" value="'+questions[i].options[j].id+'"/>'+questions[i].options[j].content+'</div>';
+		   						optn+='<div><input type="checkbox" name="'+questions[i].questionId+'" value="'+questions[i].options[j].id+'"/>'+questions[i].options[j].content+'</div>';
 		   					}
+		   					optn+='</div>';
 		   				}
 		   				if(type==3)
 		   				{
-		   					optn+='<div><span>Min Range : '+questions[i].options[0].content+'</span>'+
-		   					       '<span> Max Range : '+questions[i].options[1].content+'</span></div>';
+		   					
+		   					optn+='<div class="col-sm-12"><span>Min : '+questions[i].options[0].content+'</span><span class="pull-right">Max : '+questions[i].options[1].content+'</span></div>';
+							optn+='<input id="qst'+questions[i].questionId+'" class="space" type="range" min="'+questions[i].options[0].content+'" max="'+questions[i].options[1].content+'" step="1" value="3" data-orientation="vertical">';
 		   				}
 		   				if(type==4)
 		   				{
 		   					
-		   					optn+='<div><textarea class="qst'+questions[i].questionId+'" rows="3" cols="45" placeholder="'+questions[i].options[0].content+'"></textarea></div>';
+		   					optn+='<div><textarea id="qst'+questions[i].questionId+'" rows="3" cols="45" placeholder="'+questions[i].options[0].content+'"></textarea></div>';
 		   					
 		   				}
 		   				optn+='</div>';
@@ -77,22 +84,66 @@
 		   	
 		   		surveyContent+='<div id="submit-survey" class="col-sm-12"><button class="btn btn-md btn-primary">Submit Survey</button></div>'
 		   	 	$('#survey-questions').html(surveyContent);
+		   	
 		 
  			}
 		    
 		    $('#submit-survey').click(function(){
 		    	var questions = surveyObj.questions;
+		    	var surveyAnswers =[];
+		    	
 		    	for(var i =0; i< questions.length; i++)
 	   			{
+		    		var response ={};
 		    		if(questions[i].type==1)
 		    			{
-		    				console.log($('input[type=radio]:checked').val());
+		    			var answer='';
+		    			$("#qst"+questions[i].questionId+" input[type='radio']:checked").each(function(){
+				    		
+		    				answer+=$(this).val();
+					    });
+		    			
+		    			response = {"question":questions[i],"response":answer};
 		    			}
 		    		else if(questions[i].type==2)
 	    			{
-	    				console.log($('input[type=check]:checked').val());
+		    			
+		    			var answer='';
+		    			$("#qst"+questions[i].questionId+" input[type='checkbox']:checked").each(function(){
+				    		
+		    				answer+=$(this).val()+',';
+					    });
+		    			answer = answer.substring(0,answer.length-1);
+		    			response = {"question":questions[i],"response":answer};
 	    			}
+		    		else if(questions[i].type==3)
+	    			{
+		    			
+		    			var answer= '';
+		    			answer+=$("#qst"+questions[i].questionId).val();
+		    			response = {"question":questions[i],"response":answer};
+	    			}
+		    		else if(questions[i].type==4)
+	    			{
+		    			var answer='';
+		    			answer+=$("#qst"+questions[i].questionId).val();
+		    			response = {"question":questions[i],"response":answer};
+	    			}
+		    		
+		    		surveyAnswers.push(response);
 	   			}
+		    	
+		    	var surveyResponse = {"surveyId":surveyObj.surveyId,"surveyAnswers":surveyAnswers};
+		    	console.log(surveyResponse);
+		    	
+		    	
+		    	$.post("/user/savesurveyresponse",
+			            {
+			              response :  JSON.stringify(surveyResponse)
+			          
+			            }).done(function(res) {
+			            	alert('Survey Responses Saved ');
+			            }); 
 		    });
 	});
 </script>
