--- a/src/main/resources/templates/admin/profile.html
+++ b/src/main/resources/templates/admin/profile.html
@@ -57,6 +57,20 @@
 					   $('#submit-form').click();
 					 
 				  });
+				  $("#password_modal_save").on('click', function(ev){
+					  var currPass = $("#currPass").val();
+					  var newPass = $("#newPass").val();
+					  $.post("/admin/updatePassword",
+					            {
+					              currPass :  currPass,
+					              newPass: newPass
+					          
+					            }).done(function(res) {
+					            	var jsonObj = JSON.parse(res);
+					  				alert(jsonObj.status);	
+					  				location.reload(true);
+					            }); 
+				    });				  
 			});
 </script>
 </head>
@@ -143,25 +157,25 @@
 		        <div class="control-group">
 		            <label for="current_password" class="control-label">Current Password</label>
 		            <div class="controls">
-		                <input type="password" name="current_password">
+		                <input id="currPass" type="password" name="current_password">
 		            </div>
 		        </div>
 		        <div class="control-group">
 		            <label for="new_password" class="control-label">New Password</label>
 		            <div class="controls">
-		                <input type="password" name="new_password">
+		                <input id="newPass" type="password" name="new_password">
 		            </div>
 		        </div>
 		        <div class="control-group">
 		            <label for="confirm_password" class="control-label">Confirm Password</label>
 		            <div class="controls">
-		                <input type="password" name="confirm_password">
+		                <input id="confirmPass" type="password" name="confirm_password">
 		            </div>
 		        </div>      
 		    </div>
 		    <div class="modal-footer">
 		        <button href="#" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-		        <button href="#" class="btn btn-primary" id="password_modal_save">Save changes</button>
+		        <button class="btn btn-primary" id="password_modal_save">Save changes</button>
 		    </div>
 	    </div>
 		    
